--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.73.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/react": "~18.2.45",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.2",
+    "react-native-svg-transformer": "^1.3.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
