--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "clearCache": "expo start -c",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -16,8 +16,11 @@
   "dependencies": {
     "@clerk/clerk-expo": "^0.20.8",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.8",
+    "expo-blur": "~12.9.2",
+    "expo-camera": "~14.0.6",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
@@ -34,15 +37,13 @@
     "react-hook-form": "^7.51.0",
     "react-native": "0.73.4",
     "react-native-confirmation-code-field": "^7.3.2",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "react-native-web": "~0.19.6",
-    "@react-native-picker/picker": "2.6.1",
-    "expo-blur": "~12.9.2",
-    "react-native-gesture-handler": "~2.14.0",
-    "expo-camera": "~14.0.6"
+    "react-native-vision-camera": "^3.9.1",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
