--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
   "dependencies": {
     "@clerk/clerk-expo": "^0.20.8",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-menu/menu": "^1.0.0",
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.0.2",
+    "@tanstack/react-query": "^5.29.2",
+    "@ukashu/boring-avatars-react-native": "^1.0.1",
     "expo": "~50.0.8",
     "expo-blur": "~12.9.2",
     "expo-camera": "~14.0.6",
     "expo-font": "~11.10.3",
+    "expo-image": "~1.10.6",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
@@ -30,12 +34,13 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "javascript-time-ago": "^2.5.9",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.6",
     "react-native-confirmation-code-field": "^7.3.2",
     "react-native-figma-squircle": "^0.3.4",
     "react-native-gesture-handler": "~2.14.0",
@@ -43,8 +48,9 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
+    "react-native-text-ticker": "^1.14.0",
     "react-native-web": "~0.19.6",
-    "expo-image": "~1.10.6"
+    "expo-updates": "~0.24.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
