--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "^5.29.2",
     "@ukashu/boring-avatars-react-native": "^1.0.1",
     "expo": "~50.0.8",
+    "expo-av": "~13.10.6",
     "expo-blur": "~12.9.2",
     "expo-camera": "~14.0.6",
     "expo-font": "~11.10.3",
@@ -30,9 +31,11 @@
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-secure-store": "~12.8.1",
+    "expo-sharing": "~11.10.0",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
+    "expo-updates": "~0.24.12",
     "expo-web-browser": "~12.8.2",
     "javascript-time-ago": "^2.5.9",
     "nativewind": "^2.0.11",
@@ -44,14 +47,13 @@
     "react-native-confirmation-code-field": "^7.3.2",
     "react-native-figma-squircle": "^0.3.4",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-permissions": "^3.10.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-text-ticker": "^1.14.0",
-    "react-native-web": "~0.19.6",
-    "expo-updates": "~0.24.12",
-    "expo-sharing": "~11.10.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -63,5 +65,8 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
-  "private": true
+  "private": true,
+  "reactNativePermissionsIOS": [
+    "Microphone"
+  ]
 }
