--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-text-ticker": "^1.14.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "@shopify/react-native-skia": "0.1.221"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
