--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-menu/menu": "^1.0.0",
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/react-native-skia": "0.1.221",
     "@tanstack/react-query": "^5.29.2",
     "@ukashu/boring-avatars-react-native": "^1.0.1",
     "expo": "~50.0.8",
@@ -53,8 +54,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-text-ticker": "^1.14.0",
-    "react-native-web": "~0.19.6",
-    "@shopify/react-native-skia": "0.1.221"
+    "react-native-vexflow": "^0.0.1",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
