--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@candlefinance/blur-view": "^0.5.3",
     "@clerk/clerk-expo": "^0.20.8",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-menu/menu": "^1.0.0",
@@ -55,7 +56,8 @@
     "react-native-svg": "14.1.0",
     "react-native-text-ticker": "^1.14.0",
     "react-native-vexflow": "^0.0.1",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "vexflow": "^4.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
