--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,7 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
   "include": [
@@ -13,6 +11,7 @@
     "**/*.tsx",
     "app.config.ts",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "components/renderer/RNVexFlowSVGContext.js"
   ]
 }
