--- a/ios/sonata/Info.plist
+++ b/ios/sonata/Info.plist
@@ -48,7 +48,7 @@
     <key>NSFaceIDUsageDescription</key>
     <string>Allow $(PRODUCT_NAME) to access your Face ID biometric data.</string>
     <key>NSMicrophoneUsageDescription</key>
-    <string>This app needs to access to microphone to perform pitch detection.</string>
+    <string>Allow $(PRODUCT_NAME) to access your microphone.</string>
     <key>NSUserActivityTypes</key>
     <array>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
