--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@candlefinance/blur-view": "^0.5.3",
     "@clerk/clerk-expo": "^0.20.8",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-menu/menu": "^1.0.0",
@@ -57,6 +56,7 @@
     "react-native-text-ticker": "^1.14.0",
     "react-native-vexflow": "^0.0.1",
     "react-native-web": "~0.19.6",
+    "react-xml-parser": "^1.1.8",
     "vexflow": "^4.2.3"
   },
   "devDependencies": {
