--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "slug": "sonata",
     "version": "1.0.0",
     "orientation": "portrait",
+    "foreground-image": "./assets/images/icon.png",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "dark",
